--- a/tex/bib.bib
+++ b/tex/bib.bib
@@ -6,6 +6,20 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@article{lenet, 
+author={Y. Lecun and L. Bottou and Y. Bengio and P. Haffner}, 
+journal={Proceedings of the IEEE}, 
+title={Gradient-based learning applied to document recognition}, 
+year={1998}, 
+volume={86}, 
+number={11}, 
+pages={2278-2324}, 
+
+doi={10.1109/5.726791}, 
+ISSN={0018-9219}, 
+month={Nov}
+}
+
 @article{resnet,
   author    = {Kaiming He and
                Xiangyu Zhang and
